Random corrections, fixing External Links header size/spacing

--- a/css/main.css
+++ b/css/main.css
@@ -153,9 +153,6 @@ p.metadata {
 h1, h2, h3, h4 {
   font-weight: normal;
   padding: 0rem;
-}
-
-h2 {
   margin-top: 1rem;
 }
 
